# build_system_FastAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  utils.py
builds/: builds.yaml
tests/: test_app.py  test_main.http
